--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
 
     <!-- MainActivity Strings -->
     <string name="app_name">Graphical Passwords</string>
-    <string name="intro">This app contains several graphical password schemes. The goal of the app is to enable the user to discover the usability of graphical passwords.</string>
+    <string name="intro">This app contains several graphical password schemes. It is meant to enable users to explore the usability of different approaches in this field.</string>
     <string name="intro_attention">Passwords are stored in plain text!</string>
     <string name="action_settings">Settings</string>
 
@@ -30,21 +30,33 @@
     <string name="btn_no">No</string>
     <string name="btn_done">Done</string>
     <string name="btn_clearall">Clear all</string>
+    <string name="btn_undo">Undo</string>
     <string name="msg_pw_correct">Password correct!</string>
     <string name="msg_pw_wrong">Wrong password!</string>
+    <string name="label_input">Input:</string>
 
     <!-- Open Pass-Go Strings -->
     <string name="title_activity_pass_go">Open Pass-Go</string>
     <string name="title_activity_pass_go_create_password">Open Pass-Go: Create Password</string>
     <string name="title_activity_pass_go_login">Open Pass-Go: Enter Password</string>
     <string name="title_dialog_pass_go_createpw">Select pattern</string>
-    <string name="msg_dialog_pass_go_createpw">Please draw your desired pattern in the given grid.\n Your pattern has to contain %d line segments and / or dots.</string>
-    <string name="msg_dialog_pass_go_deletepattern">Do you really want to delete the pattern?</string>
-    <string name="title_dialog_pass_go_rememberpw">Please memorize the pattern</string>
+    <string name="msg_dialog_pass_go_createpw">Please draw your desired pattern in the designated grid.\nYour pattern has to contain %d line segments and / or dots.</string>
+    <string name="msg_dialog_pass_go_deletepattern">Would you really like to delete the pattern?</string>
+    <string name="title_dialog_pass_go_rememberpw">Please memorize the pattern:</string>
 
+    <!-- Open TAPI Strings -->
+    <string name="title_activity_tapi">Open TAPI</string>
+    <string name="title_activity_tapi_create_password">Open TAPI: Create Password</string>
+ 	<string name="title_activity_tapi_login">Open TAPI: Enter Password</string>
+ 	<string name="title_dialog_tapi_createpw">Select pass-images</string>
+ 	<string name="msg_dialog_tapi_createpw">Please choose your pass-images.\nYour password must contain %d pass-images.</string>
+ 	<string name="title_dialog_tapi_rememberpw">Please memorize the sequence of pass-images:</string>
+    
     <!-- Papers -->
-    <string name="paper_check_out">Check out our paper</string>
-    <string name="paper_references">REFERENCES</string>
+    <string name="paper_check_out">Check out our paper:</string>
+    <string name="paper_references">REFERENCE</string>
     <string name="paper_pass_go">H. Tao and C. Adams. Pass-Go: A Proposal to Improve the Usability of Graphical Passwords. <i>Int. J. Network Security</i>, 7(2):273–292, 2008.</string>
-	<string name="paper_exploring_designspace">F. Schaub, M. Walch, B. Könings, and M. Weber. Exploring the design space of graphical passwords on smartphones. In <i>Proc. SOUPS \'13</i>. ACM, 2013.</string>
+    <string name="paper_tapi">J. Citty and D. R. Hutchings. TAPI: touch&#8211;screen authentication using partitioned images. Tech. Report 2010&#8211;1, Elon University, 2010.</string>
+    <string name="paper_exploring_designspace">F. Schaub, M. Walch, B. Könings, and M. Weber. Exploring the design space of graphical passwords on smartphones. In <i>Proc. SOUPS \'13</i>. ACM, 2013.</string>
+    
 </resources>
